Dev/from kakaowebtoon repository (#3)
* kAlert 추가

* 웹툰에서 사용하던 얼럿을 조금 수정해서 가져옴
* UI Test 에도 kAlert 추가
* todo 삭제, 이벤트페이지에서 얼럿 확인 가능
* ROOT_ELEMENT_ID: react-modal 이 root element 의 id 를 요구해서 추가함
* initializeShared 삭제: SharedContainer 로 초기값 입력하도록 수정
* 로컬스토리지 관련 코드 추가
  - 웹툰 코드 그대로 가져옴
  - localStorage.ts, useLocalStorage, useLocalStorageArray, useLocalStorageMap
* shared 쪽 테스트 코드 실행 방법: `npm test -w=shared`

* 리뷰 반영

Co-authored-by: landvibe <landvibe@kakaopage.com>
Co-authored-by: landvibe <landvibe@podotree.com>

--- a/packages/shared/style/index.scss
+++ b/packages/shared/style/index.scss
@@ -1,3 +1,5 @@
+@use './variable.module.scss';
+
 body {
   // 가로모드 자동 폰트크기 조절 방지
   -webkit-text-size-adjust: none;
@@ -12,11 +14,9 @@ body {
   width: 100%;
 }
 
-$ANIMATION_DURATION: 0.2;
-
 .ReactModal__Overlay {
   opacity: 0;
-  transition: opacity #{$ANIMATION_DURATION}ms ease-out;
+  transition: opacity #{variable.$MODAL_ANIMATION_DURATION}ms ease-out;
 }
 
 .ReactModal__Overlay--after-open {
@@ -30,7 +30,7 @@ $ANIMATION_DURATION: 0.2;
 .ReactModal__Content {
   opacity: 0;
   transform: scale(0.7);
-  transition: all #{$ANIMATION_DURATION}ms ease-in;
+  transition: all #{variable.$MODAL_ANIMATION_DURATION}ms ease-in;
 }
 
 .ReactModal__Content--after-open {
@@ -47,7 +47,7 @@ $ANIMATION_DURATION: 0.2;
   outline: none;
   position: absolute;
   transform: translateY(100%);
-  transition: all #{$ANIMATION_DURATION}ms ease-in-out;
+  transition: all #{variable.$MODAL_ANIMATION_DURATION}ms ease-in-out;
 }
 
 .AlertModal__Content--after-open {
