color, textVariant, buttonVariant 를 tailwind 로 변경 (#4)
* color, textVariant, buttonVariant 를 tailwind 로 변경

* tailwind config 관련 type 이름에 I 추가

* tailwind의 theme 값 참조 예제 추가

* 리뷰 반영

* textVariant 추가 시 중복 타이핑 제거

* 리뷰 반영

* buttonVariant 추가 시 중복 타이핑 제거

* color 파일 삭제 및 type 오류 수정

* 리뷰 반영

* st, val 전역 변수 제거

* 리뷰 반영

* resolveConfig 제거
* tailwind default 값 제거

* 리뷰 반영

* 루트 tailwind config를 shared 로 변경
* 루트 tailwind config 에 project path 추가

* tailwind component 변수명 변경

Co-authored-by: kiwi.bok <93119681+kiwi-bok@users.noreply.github.com>

Co-authored-by: landvibe.podo <landvibe.podo@kakaoent.com>
Co-authored-by: kiwi.bok <93119681+kiwi-bok@users.noreply.github.com>

--- a/packages/todo/src/newTodo/component/SelectPriority.module.scss
+++ b/packages/todo/src/newTodo/component/SelectPriority.module.scss
@@ -4,6 +4,10 @@
   max-width: 100px;
 }
 
+/**
+ * 주요 포인트
+ * tailwind의 theme 값을 scss에서 참조
+ */
 .selected {
-  color: red;
+  color: theme('colors.red');
 }
