default layout 마이그레이션 (#15)
* default layout 추가

* header component 추가

* 리뷰 반영

* header 관련 ui 이슈 수정
* header anchor 클릭시 replace 로 동작하는 이슈 수정

* 헤더 영역 카카오페이지 링크를 Anchor로 변경

* 장르 링크 추가

* genreLink 컴포넌트 분리
* React.FC 타입 제거

* 리뷰 반영

* _document 코드 가져오기(tiara 설정 제외)

--- a/packages/stage/src/common/style/variable.module.scss
+++ b/packages/stage/src/common/style/variable.module.scss
@@ -6,6 +6,12 @@ $Z_INDEX: (
   Loading: 1000,
 );
 
+$SCREEN: (
+  Desktop: 1036,
+);
+
+$MAX_WIDTH: 1068;
+
 :export {
   Z_INDEX_LOADING: map-get($Z_INDEX, 'Loading');
   Z_INDEX_MODAL: map-get($Z_INDEX, 'Modal');
