svg 처리 변경 및 alias 추가 (#20)
* svg 처리 변경 및 alias 추가

* stage 에 추가 package 설치

* 리뷰 반영

* npm 모듈 exact 버전으로 변경

--- a/packages/stage/src/common/style/base.scss
+++ b/packages/stage/src/common/style/base.scss
@@ -2,6 +2,7 @@
 
 html {
   font-family: 'Noto Sans KR', sans-serif;
+  box-sizing: border-box;
 }
 
 *,
@@ -10,4 +11,10 @@ html {
   min-width: 0;
   box-sizing: inherit;
   letter-spacing: -0.02em;
+}
+
+svg,
+img {
+  max-width: 100%;
+  max-height: 100%;
 }
