update package-lock.json for npm ci

--- a/packages/stage/src/common/style/base.scss
+++ b/packages/stage/src/common/style/base.scss
@@ -319,8 +319,7 @@ textarea {
   font-family: 'NotoSerifKR';
   font-style: normal;
   font-weight: normal;
-  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/NotoSerifKR.woff')
-    format('woff');
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/NotoSerifKR.woff') format('woff');
 }
 
 *,
