--- a/packages/stage/src/common/style/variable.module.scss
+++ b/packages/stage/src/common/style/variable.module.scss
@@ -1,6 +1,7 @@
 // 최소 10 단위로 값을 할당하자
 // 10 이하의 값은 하나의 컴포넌트 내에서 자유롭게 사용한다.
 $Z_INDEX: (
+  PointIcon: 100,
   Modal: 200,
   Toast: 300,
   Loading: 1000,
@@ -16,6 +17,7 @@ $MAX_WIDTH: 1068;
 :export {
   Z_INDEX_LOADING: map-get($Z_INDEX, 'Loading');
   Z_INDEX_MODAL: map-get($Z_INDEX, 'Modal');
+  Z_INDEX_POINT_ICON: map-get($Z_INDEX, 'PointIcon');
   Z_INDEX_SELECT_DROPDOWN: map-get($Z_INDEX, 'SelectDropdown');
   Z_INDEX_TOAST: map-get($Z_INDEX, 'Toast');
 }
